# openfisca-reform-generator

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
app/: app.py  parameter.py  pyproject.toml  requirements.txt  scenario.py  server.py  streamlit_app.py  test.py  ui.py
src/app/: reform.py  scenario.py  ui.py
