[project]
name = "openfisca-reform-generator"
version = "0.1.0"
description = "Application Shiny Python pour générer des réformes paramétriques OpenFisca"
authors = [{ name = "Mahdi Ben Jelloul", email = "benjello@example.com" }]
requires-python = ">=3.9,<3.12"
dependencies = [
    "openfisca-core",
    "openfisca-country-template<8.0.0",
    "openfisca-survey-manager>=3.1.0",
    "ipython>=8.18.1",
    "shiny>=1.0.0",
    "slugify>=0.0.1",
    "matplotlib>=3.9.4",
]

[tool.uv]
# facultatif — permet de fixer les sources ou configurations supplémentaires
