[project]
name = "openfisca-reform-generator"
version = "0.1.0"
description = "Application Shiny Python pour générer des réformes paramétriques OpenFisca"
authors = [{ name = "Mahdi Ben Jelloul", email = "benjello@example.com" }]
requires-python = ">=3.9,<3.12"
dependencies = [
    "openfisca-core",
    "openfisca-country-template<8.0.0",
    "openfisca-survey-manager>=3.1.0",
    "ipython>=8.18.1",
    "shiny>=1.0.0",
    "slugify>=0.0.1",
    "matplotlib>=3.9.4",
    "plotly>=5.0.0",
    "shinywidgets>=0.2.0",
]

[tool.uv]

[tool.setuptools]
packages = ["app"]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
    "ipython>=8.18.1",
]
# facultatif — permet de fixer les sources ou configurations supplémentaires
