[project]
name = "openfisca-nc-reform-generator"
version = "0.1.0"
description = "Application Shiny Python pour générer des réformes paramétriques OpenFisca pour la Nouvelle Calédonie"
authors = [{ name = "Mahdi Ben Jelloul", email = "mahdi.benjelloul@gmail.com" }]
requires-python = ">=3.9,<3.12"
dependencies = [
    "openfisca-core",
    "openfisca-survey-manager>=3.1.0",
    "ipython>=8.18.1",
    "shiny>=1.0.0",
    "slugify>=0.0.1",
    "matplotlib>=3.9.4",
    "plotly>=5.0.0",
    "shinywidgets>=0.2.0",
]

[tool.uv]

[tool.setuptools]
packages = ["app"]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
    "ipython>=8.18.1",
]
