[project]
name = "openfisca-reform-generator"
version = "0.1.0"
description = "Application Shiny Python pour générer des réformes paramétriques OpenFisca"
authors = [{ name = "Mahdi Ben Jelloul", email = "benjello@example.com" }]
requires-python = ">=3.9"
dependencies = [
    "shiny >= 0.9.0",
    "shinylive >= 0.3.0",
    "openfisca-core"
]

[tool.uv]
# facultatif — permet de fixer les sources ou configurations supplémentaires
