[project]
name = "openfisca-reform-generator"
version = "0.1.0"
description = "Application Shiny Python pour générer des réformes paramétriques OpenFisca"
authors = [{ name = "Mahdi Ben Jelloul", email = "benjello@example.com" }]
requires-python = ">=3.9,<3.12"
dependencies = [
    "shiny >= 0.9.0",
    "shinylive >= 0.3.0",
    "openfisca-core",
    "openfisca-country-template<8.0.0",
    "openfisca-survey-manager>=3.0.4",
    "ipython>=8.18.1",
    "slugify>=0.0.1",
]

[tool.uv]
# facultatif — permet de fixer les sources ou configurations supplémentaires
